# media

./: ARCHITECTURE.md  Cargo.toml  README.md  extraction-tench-media.md
.gitea/workflows/: ci.yml
apps/composer/: README.md
apps/composer/src-tauri/: Cargo.toml  tauri.conf.json
apps/composer/src-tauri/capabilities/: default.json
apps/composer/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/composer/src-tauri/src/ui/: automation.rs  inspector.rs  left_panel.rs  mod.rs  preview.rs  preview_panel.rs  right_panel.rs  state.rs  timeline.rs  timeline_panel.rs  toolbar.rs  widget.rs
apps/composer/src-tauri/src/ui/state/: actions.rs  colors.rs  init.rs  notice.rs  playback.rs  project_io.rs  queries.rs  tests.rs  types.rs  undo.rs
apps/composer/src-tauri/tests/: plan_ui_e2e.rs
apps/pixel-design/: README.md
apps/pixel-design/src-tauri/: Cargo.toml  tauri.conf.json
apps/pixel-design/src-tauri/capabilities/: default.json
apps/pixel-design/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/pixel-design/src-tauri/src/ui/: canvas.rs  color_picker.rs  layers.rs  mod.rs  panels.rs  state.rs  theme.rs  toolbar.rs  widget.rs
apps/pixel-design/src-tauri/src/ui/state/: adjust.rs  ai.rs  canvas_actions.rs  color.rs  history.rs  layers.rs  model.rs  tests.rs  view.rs
apps/pixel-design/src-tauri/tests/: pixel_design_e2e.rs
apps/player/: README.md
apps/player/src-tauri/: Cargo.toml  tauri.conf.json
apps/player/src-tauri/capabilities/: default.json
apps/player/src-tauri/src/: commands.rs  gst_backend.rs  lib.rs  main.rs  mpris.rs  platform_util.rs  system_media.rs
apps/player/src-tauri/src/ui/: ai_panel.rs  app.rs  controls.rs  mod.rs  paint_controls.rs  paint_overlays.rs  paint_panels.rs  paint_video.rs  state.rs  theme.rs  video_surface.rs
apps/player/src-tauri/src/ui/app/: actions.rs  automation.rs  backend.rs  dialogs.rs  widget.rs
apps/player/src-tauri/src/ui/paint_overlays/: chapter.rs  context_menu.rs  equalizer.rs  gif_capture.rs  gif_options.rs  help.rs  modals.rs  pip.rs  subtitle_search.rs  subtitle_style.rs  toast.rs  url.rs
apps/player/src-tauri/src/ui/paint_panels/: ai.rs  chapters.rs  drawer.rs  info.rs  playlist.rs  subtitles.rs
apps/player/src-tauri/src/ui/state/: chapters.rs  click_regions.rs  media.rs  misc.rs  model.rs  panels.rs  playback.rs  playlist.rs  subtitles.rs  tests.rs
apps/player/src-tauri/tests/: plan_ui_e2e.rs
apps/view/src-tauri/: Cargo.toml  tauri.conf.json
apps/view/src-tauri/capabilities/: default.json
apps/view/src-tauri/src/: commands.rs  lib.rs  main.rs  platform_util.rs
apps/view/src-tauri/src/ui/: app.rs  controls.rs  image_stage.rs  mod.rs  overlays.rs  panels.rs  state.rs  theme.rs  tools.rs
apps/view/src-tauri/src/ui/app/: action_batch_dialogs.rs  action_context.rs  action_dispatch.rs  action_edit_file.rs  action_metadata.rs  action_nav.rs  action_panels.rs  action_tools.rs  ai_actions.rs  automation.rs  automation_extra.rs  automation_ids.rs  automation_nodes.rs  automation_status.rs  batch_actions.rs  dialogs.rs  filter_actions.rs  image_io.rs  keyboard_events.rs  pointer_events.rs  window_events.rs
apps/view/src-tauri/src/ui/controls/: batch.rs  context_menu.rs  hit_test.rs  overlays.rs  slideshow.rs
apps/view/src-tauri/src/ui/overlays/: annotations.rs  bottom.rs  controls.rs  dialogs.rs  empty.rs  nav.rs  rects.rs
apps/view/src-tauri/src/ui/panels/: ai.rs  compare.rs  file_info.rs  filter.rs  help.rs  metadata.rs  quick_edit.rs  rects.rs  settings.rs
apps/view/src-tauri/src/ui/state/: ops.rs  tests.rs
apps/view/src-tauri/tests/: plan_ui_e2e.rs  view_e2e.rs
apps/view/src-tauri/tests/view_e2e/: ai_panel.rs  annotation_actions.rs  automatic.rs  batch.rs  bottom_toolbar_new.rs  canvas_advanced.rs  compare_panel.rs  context_menu.rs  context_menu_new.rs  convert_tool.rs  crop_tool.rs  delete_confirm.rs  edit_banner.rs  file_info.rs  filter_panel.rs  help_overlay.rs  image_stage.rs  keyboard_f2.rs  metadata_panel.rs  navigation.rs  overlay_empty.rs  print_backend.rs  print_dialog.rs  quick_edit.rs  rename_dialog.rs  resize_tool.rs  set_wallpaper.rs  settings_panel.rs  slideshow.rs  slideshow_advanced.rs  top_overlay.rs  url_dialog.rs  window_features.rs
crates/composer-core/: Cargo.toml
crates/composer-core/src/: effect.rs  lib.rs  project.rs  timeline.rs  transition.rs
crates/image-core/: Cargo.toml
crates/image-core/src/: archive.rs  lib.rs  metadata.rs  types.rs
crates/image-core/tests/: public_api.rs
crates/image-runtime/: Cargo.toml
crates/image-runtime/src/: lib.rs  pixel.rs
crates/image-runtime/src/view/: service.rs  util.rs
crates/image-runtime/tests/: public_api.rs
crates/media-core/: Cargo.toml
crates/media-core/src/: lib.rs
crates/media-playback/: Cargo.toml
crates/media-playback/src/: fallback.rs  gstreamer_backend.rs  lib.rs  types.rs
crates/media-runtime/: Cargo.toml
crates/media-runtime/src/: composer.rs  lib.rs  player.rs
crates/media-runtime/tests/: public_api.rs
crates/pixel-core/: Cargo.toml
crates/pixel-core/src/: blend.rs  buffer.rs  document.rs  filter.rs  lib.rs  selection.rs  stroke.rs  tile.rs
crates/subtitle-core/: Cargo.toml
crates/subtitle-core/src/: lib.rs
plans/: 2026-05-27-tench-media-extraction-v1.md
plans/background/composer/: audio-waveform-display.md
plans/background/pixel-design/: canvas-cursor-crosshair.md  filter-preview-render.md
plans/background/player/: automatic-ab-loop-playback-enforcement.md  automatic-audio-only-visualizer.md  automatic-buffering-progress-bar.md  automatic-click-region-refresh.md  automatic-context-menu-hover-highlight.md  automatic-empty-state-drop-prompt.md  automatic-gapless-next-track.md  automatic-gif-recording-frame-capture.md  automatic-gif-recording-indicator.md  automatic-media-info-refresh.md  automatic-playback-position-progress.md  automatic-seek-hover-thumbnail-preview.md  automatic-side-panel-layout-reserve.md  automatic-subtitle-timing-overlay.md  automatic-toast-lifecycle.md  automatic-video-frame-render.md
tools/architecture-guard/: line_budget_baseline.txt  main.rs
(+1734 files in other folders)
