[workspace]
members = [
  "apps/view/src-tauri",
  "apps/pixel-design/src-tauri",
  "apps/player/src-tauri",
  "apps/composer/src-tauri",
  "crates/tench-ui",
  "crates/ui-automation-core",
  "crates/tench-ui-test",
  "crates/shared-types",
  "crates/storage-core",
  "crates/fs-core",
  "crates/media-core",
  "crates/image-core",
  "crates/image-runtime",
  "crates/pixel-core",
  "crates/media-runtime",
  "crates/media-playback",
  "crates/subtitle-core",
  "crates/composer-core",
  "tools/architecture-guard",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Tench"]

[workspace.dependencies]
# External dependencies
arboard = { version = "3" }
base64 = { version = "0.22" }
getrandom = { version = "0.3" }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "tga", "tiff", "webp"] }
kamadak-exif = { version = "0.6" }
pollster = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sevenz-rust2 = { version = "0.21" }
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin-dialog = { version = "2" }
ureq = { version = "2", features = ["json"] }
unrar-ng = { version = "0.7" }
aes-gcm = { version = "0.10" }
sha2 = { version = "0.10" }
zip = { version = "8.6", default-features = false, features = ["deflate"] }

# Internal crates
tench-composer-core = { path = "crates/composer-core" }
tench-fs-core = { path = "crates/fs-core" }
tench-image-core = { path = "crates/image-core" }
tench-image-runtime = { path = "crates/image-runtime" }
tench-media-core = { path = "crates/media-core" }
tench-media-playback = { path = "crates/media-playback" }
tench-media-runtime = { path = "crates/media-runtime" }
tench-pixel-core = { path = "crates/pixel-core" }
tench-shared-types = { path = "crates/shared-types" }
tench-storage-core = { path = "crates/storage-core" }
tench-subtitle-core = { path = "crates/subtitle-core" }
tench-ui = { path = "crates/tench-ui" }
tench-ui-automation-core = { path = "crates/ui-automation-core" }
tench-ui-test = { path = "crates/tench-ui-test" }
