[package]
name = "tench-composer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core timeline and project types for Tench Composer"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
