[package]
name = "tench-image-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared Tench image loading, metadata, and thumbnail primitives"

[features]
default = []
rar-archives = ["dep:unrar-ng"]

[dependencies]
base64.workspace = true
image.workspace = true
kamadak-exif.workspace = true
sevenz-rust2.workspace = true
serde.workspace = true
tench-media-core.workspace = true
unrar-ng = { workspace = true, optional = true }
zip.workspace = true
