[package]
name = "tench-image-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared Tench image app runtime boundaries"

[dependencies]
base64.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
tench-image-core.workspace = true
tench-pixel-core.workspace = true
tench-storage-core.workspace = true
tench-ui.workspace = true
