[package]
name = "tench-media-playback"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GStreamer-based media playback backend"

[features]
default = []
gstreamer-backend = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]

[dependencies]
gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }
gstreamer-video = { version = "0.25", optional = true }
