[package]
name = "tench-pixel-design"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pixel Design desktop app"

[lib]
name = "tench_pixel_design_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tench-image-runtime.workspace = true
tench-pixel-core.workspace = true
tench-ui = { workspace = true, features = ["tauri"] }
image.workspace = true

[dev-dependencies]
tench-ui-test.workspace = true
tench-ui-automation-core.workspace = true
