[package]
name = "tench-player"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Player desktop app"

[lib]
name = "tench_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tench-media-playback.workspace = true
tench-media-runtime.workspace = true
tench-ui = { workspace = true, features = ["tauri"] }
image.workspace = true
arboard.workspace = true
tench-shared-types.workspace = true

[dev-dependencies]
tench-ui-test.workspace = true
tench-ui-automation-core.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
souvlaki = "0.8"
